feat: 보너스 번호 포함 여부 확인