@@ -12,11 +12,11 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class BonusNumberTest {
 
-    public List<Integer> numbers;
+    public Lotto numbers;
 
     @BeforeEach
     void createNumbers() {
-        numbers = new ArrayList<>(Arrays.asList(1,2,3,4,5,6));
+        numbers = new Lotto(List.of(1,2,3,4,5,6));
     }
 
     @DisplayName("보너스 번호에 숫자 이외의 문자가 포함되어 있으면 예외가 발생한다.")
